# state-machine

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  state_machine.hpp
include/: action.hpp  event.hpp  hashing.hpp  state.hpp  state_machine.hpp  transition.hpp
src/: action.cpp  event.cpp  hashing.cpp  state.cpp  state_machine.cpp  transition.cpp
